--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+ 
+  drift_flutter: ^0.2.7 
+  
+  drift: ^2.29.0 
+  sqlite3_flutter_libs: ^0.5.40 
+  path: ^1.9.0 
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +52,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  drift_dev: ^2.29.0 
+  build_runner: ^2.4.11
+
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
