--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
  
-  drift_flutter: ^0.2.7 
-  
+  # Database
   drift: ^2.29.0 
   sqlite3_flutter_libs: ^0.5.40 
   path: ^1.9.0 
   path_provider: ^2.1.5
+  collection: ^1.18.2
+
+  # Cloud/Supabase
+  shared_preferences: ^2.1.1
+  connectivity_plus: ^5.0.2
+  supabase_flutter: ^2.3.4
+  flutter_dotenv: ^5.1.0
+
+  # Security
+  uuid: ^4.0.0  
+  crypto: ^3.0.3
+
+  # Desktop
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
 
 dev_dependencies:
   flutter_test:
@@ -68,10 +84,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets for the application
+  assets:
+    - assets/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
